--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.17.0"
   }
 }
