--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^13.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.3",
