env var criadas

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SERVER_PORT=3000
-DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASSWORD=password
-DB_DATABASE=toDoList
-DB_PORT=3306
+SERVER_PORT=YOURSERVERPORT
+DB_HOST=YOURDBHOST
+DB_USER=YOURDBUSER
+DB_PASSWORD=YOURDBPASSWORD
+DB_DATABASE=YOURDBNAME
+DB_PORT=YOURDBPORT
